--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
-<script src="cat.js"></script>
+    <script src="cat.js"></script>
 
 </head>
+
 <body>
-    
-<div id="container">
-<div id="NewDog"></div>
-<button id="Btn">NUEVO</button>
-</div>
-    
 
+    <div id="container">
+        <div id="newDog"></div>
+        <button id="Btn">NUEVO</button>
+    </div>
 
-
-
-<div id="grid">
-<div class= "table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class ="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class ="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class=" table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table"></div>
-<div class="table" id="cat"></div>
-</div>
+    <div id="grid">
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table"></div>
+        <div class="table" id="cat"></div>
+    </div>
 
 
 
 
 
 </body>
+
 </html>
